API/Litecad.h


HANDLE LCAPI lcBlockSelJoin     (HANDLE hBlock, double Delta);

HANDLE LCAPI lcBlockGetFirstSel (HANDLE hBlock);

HANDLE LCAPI lcBlockGetNextSel  (HANDLE hBlock);


// Graphic object modify
BOOL   LCAPI lcEntErase     (HANDLE hEnt, BOOL bErase);
 
BOOL   LCAPI lcEntMove      (HANDLE hEnt, double dX, double dY);
 
BOOL   LCAPI lcEntScale     (HANDLE hEnt, double X0, double Y0, double Scal);
 
BOOL   LCAPI lcEntRotate    (HANDLE hEnt, double X0, double Y0, double Angle);

BOOL   LCAPI lcEntMirror    (HANDLE hEnt, double X1, double Y1, double X2, double Y2);

BOOL   LCAPI lcEntExplode   (HANDLE hEnt, BOOL bSelect);

BOOL   LCAPI lcEntOffset    (HANDLE hEnt, double Dist);
 
BOOL   LCAPI lcEntToTop     (HANDLE hEnt);

BOOL   LCAPI lcEntToBottom  (HANDLE hEnt);

BOOL   LCAPI lcEntToAbove   (HANDLE hEnt, HANDLE hEnt2);

BOOL   LCAPI lcEntToUnder   (HANDLE hEnt, HANDLE hEnt2);

BOOL   LCAPI lcEntGetGrip   (HANDLE hEnt, int iGrip, double* pX, double* pY);
 
BOOL   LCAPI lcEntPutGrip   (HANDLE hEnt, int iGrip, double X, double Y);

BOOL   LCAPI lcEntUpdate    (HANDLE hEnt);         // undoc

int    LCAPI lcIntersection   (HANDLE hEnt, HANDLE hEnt2);

BOOL   LCAPI lcInterGetPoint  (int iPoint, double* pX, double* pY);


// Polyline Vertices
HANDLE LCAPI lcPlineAddVer      (HANDLE hPline, HANDLE hVer0, double X, double Y);

HANDLE LCAPI lcPlineAddVer2     (HANDLE hPline, HANDLE hVer0, double X, double Y, double Param, double W0, double W1);

HANDLE LCAPI lcPlineAddVerDir   (HANDLE hPline, HANDLE hVer0, double Ang, double Len);

BOOL   LCAPI lcPlineDeleteVer   (HANDLE hPline, HANDLE hVer);

HANDLE LCAPI lcPlineGetFirstVer (HANDLE hPline);

HANDLE LCAPI lcPlineGetNextVer  (HANDLE hPline, HANDLE hVer);

HANDLE LCAPI lcPlineGetLastVer  (HANDLE hPline);

HANDLE LCAPI lcPlineGetPrevVer  (HANDLE hPline, HANDLE hVer);

HANDLE LCAPI lcPlineGetVer      (HANDLE hPline, int Index);

BOOL   LCAPI lcPlineReverse     (HANDLE hPline);


// Viewport
BOOL   LCAPI lcVportSetView     (HANDLE hVport, double Xcen, double Ycen, double Scale, double Angle);

BOOL   LCAPI lcVportFrolClear   (HANDLE hVport);

BOOL   LCAPI lcVportFrolAdd     (HANDLE hVport, HANDLE hLayer);

HANDLE LCAPI lcVportFrolGet     (HANDLE hVport, int iLayer);

BOOL   LCAPI lcVportIsFrol      (HANDLE hVport, HANDLE hLayer);


// Block attribute
HANDLE LCAPI lcBlkRefAddAtt      (HANDLE hBlockRef, LPCWSTR szTag, LPCWSTR szValue);    // undoc
HANDLE LCAPI lcBlkRefGetFirstAtt (HANDLE hBlockRef);

HANDLE LCAPI lcBlkRefGetNextAtt  (HANDLE hBlockRef, HANDLE hAttrib);

HANDLE LCAPI lcBlkRefGetAtt      (HANDLE hBlockRef, LPCWSTR szTag);


// Hatch
BOOL   LCAPI lcHatchBoundStart   (HANDLE hHatch);

BOOL   LCAPI lcHatchBoundPoint   (HANDLE hHatch, double X, double Y);

BOOL   LCAPI lcHatchBoundEndLoop (HANDLE hHatch);
 
BOOL   LCAPI lcHatchBoundEnd     (HANDLE hHatch);
 
BOOL   LCAPI lcHatchPatStart     (HANDLE hHatch);
 
BOOL   LCAPI lcHatchPatLine      (HANDLE hHatch, double Angle, double x0, double y0, double dx, double dy, int nDash, double L0, double L1, double L2, double L3, double L4, double L5, double L6, double L7);

BOOL   LCAPI lcHatchPatEnd       (HANDLE hHatch);

int    LCAPI lcHatchGetLoopSize  (HANDLE hHatch, int iLoop);

BOOL   LCAPI lcHatchGetPoint     (HANDLE hHatch, int iPnt, double* pX, double* pY);


// Rectangle
int    LCAPI lcRectGetPolyline   (HANDLE hRect, double* pX, double* pY, double* pBulge);


// Construction line
BOOL   LCAPI lcXlinePutDir  (HANDLE hXline, double X, double Y);


// Design window
HANDLE LCAPI lcCreateWindow      (HWND  hWndParent, int Style, int Left, int Top, int Width, int Height);

BOOL   LCAPI lcDeleteWindow      (HANDLE hLcWnd);

BOOL   LCAPI lcWndResize         (HANDLE hLcWnd, int Left, int Top, int Width, int Height);

BOOL   LCAPI lcWndSelectView     (HANDLE hLcWnd, HANDLE hView);

BOOL   LCAPI lcWndZoomRect       (HANDLE hLcWnd, double Left, double Bottom, double Right, double Top);

BOOL   LCAPI lcWndZoomScale      (HANDLE hLcWnd, double Scal);

BOOL   LCAPI lcWndRedraw         (HANDLE hLcWnd);

BOOL   LCAPI lcWndSetFocus       (HANDLE hLcWnd);

BOOL   LCAPI lcWndExeCommand     (HANDLE hLcWnd, int Command, int CmdParam);

BOOL   LCAPI lcWndCoordFromDrw   (HANDLE hLcWnd, double Xdrw, double Ydrw, int* pXwin, int* pYwin);

BOOL   LCAPI lcWndCoordToDrw     (HANDLE hLcWnd, int Xwin, int Ywin, double* pXdrw, double* pYdrw);

BOOL   LCAPI lcWndGetCursorCoord (HANDLE hLcWnd, int* pXwin, int* pYwin, double* pXdrw, double* pYdrw);

HANDLE LCAPI lcWndGetEntByPoint  (HANDLE hLcWnd, int Xwin, int Ywin);

BOOL   LCAPI lcWndSetCmdwin      (HANDLE hLcWnd, HANDLE hCmdLine);

BOOL   LCAPI lcWndSetPropwin     (HANDLE hLcWnd, HANDLE hPropWnd);