Samples/VCS/Test1/Litecad.cs


  [DllImport("litecad.dll", EntryPoint="lcBlockSelJoin", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockSelJoin(int hBlock, double Delta);

  [DllImport("litecad.dll", EntryPoint="lcBlockGetFirstSel", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockGetFirstSel(int hBlock);

  [DllImport("litecad.dll", EntryPoint="lcBlockGetNextSel", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockGetNextSel(int hBlock);

  [DllImport("litecad.dll", EntryPoint="lcEntErase", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool EntErase(int hEnt, bool bErase);

  [DllImport("litecad.dll", EntryPoint="lcEntMove", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool EntMove(int hEnt, double dX, double dY);

  [DllImport("litecad.dll", EntryPoint="lcEntScale", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool EntScale(int hEnt, double X0, double Y0, double Scal);

  [DllImport("litecad.dll", EntryPoint="lcEntRotate", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool EntRotate(int hEnt, double X0, double Y0, double Angle);

  [DllImport("litecad.dll", EntryPoint="lcEntMirror", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool EntMirror(int hEnt, double X1, double Y1, double X2, double Y2);

  [DllImport("litecad.dll", EntryPoint="lcEntExplode", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool EntExplode(int hEnt, bool bSelect);

  [DllImport("litecad.dll", EntryPoint="lcEntOffset", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool EntOffset(int hEnt, double Dist);

  [DllImport("litecad.dll", EntryPoint="lcEntToTop", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool EntToTop(int hEnt);

  [DllImport("litecad.dll", EntryPoint="lcEntToBottom", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool EntToBottom(int hEnt);

  [DllImport("litecad.dll", EntryPoint="lcEntToAbove", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool EntToAbove(int hEnt, int hEnt2);

  [DllImport("litecad.dll", EntryPoint="lcEntToUnder", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool EntToUnder(int hEnt, int hEnt2);

  [DllImport("litecad.dll", EntryPoint="lcEntGetGrip", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool EntGetGrip(int hEnt, int iGrip, out double pX, out double pY);

  [DllImport("litecad.dll", EntryPoint="lcEntPutGrip", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool EntPutGrip(int hEnt, int iGrip, double X, double Y);

  [DllImport("litecad.dll", EntryPoint="lcEntUpdate", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool EntUpdate(int hEnt);

  [DllImport("litecad.dll", EntryPoint="lcIntersection", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int Intersection(int hEnt, int hEnt2);

  [DllImport("litecad.dll", EntryPoint="lcInterGetPoint", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool InterGetPoint(int iPoint, out double pX, out double pY);

  [DllImport("litecad.dll", EntryPoint="lcPlineAddVer", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int PlineAddVer(int hPline, int hVer0, double X, double Y);

  [DllImport("litecad.dll", EntryPoint="lcPlineAddVer2", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int PlineAddVer2(int hPline, int hVer0, double X, double Y, double Param, double W0, double W1);

  [DllImport("litecad.dll", EntryPoint="lcPlineAddVerDir", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int PlineAddVerDir(int hPline, int hVer0, double Ang, double Len);

  [DllImport("litecad.dll", EntryPoint="lcPlineDeleteVer", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool PlineDeleteVer(int hPline, int hVer);

  [DllImport("litecad.dll", EntryPoint="lcPlineGetFirstVer", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int PlineGetFirstVer(int hPline);

  [DllImport("litecad.dll", EntryPoint="lcPlineGetNextVer", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int PlineGetNextVer(int hPline, int hVer);

  [DllImport("litecad.dll", EntryPoint="lcPlineGetLastVer", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int PlineGetLastVer(int hPline);

  [DllImport("litecad.dll", EntryPoint="lcPlineGetPrevVer", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int PlineGetPrevVer(int hPline, int hVer);

  [DllImport("litecad.dll", EntryPoint="lcPlineGetVer", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int PlineGetVer(int hPline, int Index);

  [DllImport("litecad.dll", EntryPoint="lcPlineReverse", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool PlineReverse(int hPline);

  [DllImport("litecad.dll", EntryPoint="lcVportSetView", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool VportSetView(int hVport, double Xcen, double Ycen, double Scale, double Angle);

  [DllImport("litecad.dll", EntryPoint="lcVportFrolClear", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool VportFrolClear(int hVport);

  [DllImport("litecad.dll", EntryPoint="lcVportFrolAdd", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool VportFrolAdd(int hVport, int hLayer);

  [DllImport("litecad.dll", EntryPoint="lcVportFrolGet", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int VportFrolGet(int hVport, int iLayer);

  [DllImport("litecad.dll", EntryPoint="lcVportIsFrol", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool VportIsFrol(int hVport, int hLayer);

  [DllImport("litecad.dll", EntryPoint="lcBlkRefAddAtt", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlkRefAddAtt(int hBlockRef, string szTag, string szValue);

  [DllImport("litecad.dll", EntryPoint="lcBlkRefGetFirstAtt", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlkRefGetFirstAtt(int hBlockRef);

  [DllImport("litecad.dll", EntryPoint="lcBlkRefGetNextAtt", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlkRefGetNextAtt(int hBlockRef, int hAttrib);

  [DllImport("litecad.dll", EntryPoint="lcBlkRefGetAtt", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlkRefGetAtt(int hBlockRef, string szTag);

  [DllImport("litecad.dll", EntryPoint="lcHatchBoundStart", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool HatchBoundStart(int hHatch);

  [DllImport("litecad.dll", EntryPoint="lcHatchBoundPoint", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool HatchBoundPoint(int hHatch, double X, double Y);

  [DllImport("litecad.dll", EntryPoint="lcHatchBoundEndLoop", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool HatchBoundEndLoop(int hHatch);

  [DllImport("litecad.dll", EntryPoint="lcHatchBoundEnd", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool HatchBoundEnd(int hHatch);

  [DllImport("litecad.dll", EntryPoint="lcHatchPatStart", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool HatchPatStart(int hHatch);

  [DllImport("litecad.dll", EntryPoint="lcHatchPatLine", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool HatchPatLine(int hHatch, double Angle, double x0, double y0, double dx, double dy, int nDash, double L0, double L1, double L2, double L3, double L4, double L5, double L6, double L7);

  [DllImport("litecad.dll", EntryPoint="lcHatchPatEnd", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool HatchPatEnd(int hHatch);

  [DllImport("litecad.dll", EntryPoint="lcHatchGetLoopSize", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int HatchGetLoopSize(int hHatch, int iLoop);

  [DllImport("litecad.dll", EntryPoint="lcHatchGetPoint", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool HatchGetPoint(int hHatch, int iPnt, out double pX, out double pY);

  [DllImport("litecad.dll", EntryPoint="lcRectGetPolyline", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int RectGetPolyline(int hRect, out double pX, out double pY, out double pBulge);

  [DllImport("litecad.dll", EntryPoint="lcXlinePutDir", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool XlinePutDir(int hXline, double X, double Y);

  [DllImport("litecad.dll", EntryPoint="lcCreateWindow", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int CreateWindow(IntPtr hWndParent, int Style, int Left, int Top, int Width, int Height);

  [DllImport("litecad.dll", EntryPoint="lcDeleteWindow", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool DeleteWindow(int hLcWnd);

  [DllImport("litecad.dll", EntryPoint="lcWndResize", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool WndResize(int hLcWnd, int Left, int Top, int Width, int Height);

  [DllImport("litecad.dll", EntryPoint="lcWndSelectView", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool WndSelectView(int hLcWnd, int hView);

  [DllImport("litecad.dll", EntryPoint="lcWndZoomRect", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool WndZoomRect(int hLcWnd, double Left, double Bottom, double Right, double Top);

  [DllImport("litecad.dll", EntryPoint="lcWndZoomScale", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool WndZoomScale(int hLcWnd, double Scal);

  [DllImport("litecad.dll", EntryPoint="lcWndRedraw", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool WndRedraw(int hLcWnd);

  [DllImport("litecad.dll", EntryPoint="lcWndSetFocus", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool WndSetFocus(int hLcWnd);

  [DllImport("litecad.dll", EntryPoint="lcWndExeCommand", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool WndExeCommand(int hLcWnd, int Command, int CmdParam);

  [DllImport("litecad.dll", EntryPoint="lcWndCoordFromDrw", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool WndCoordFromDrw(int hLcWnd, double Xdrw, double Ydrw, out int pXwin, out int pYwin);

  [DllImport("litecad.dll", EntryPoint="lcWndCoordToDrw", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool WndCoordToDrw(int hLcWnd, int Xwin, int Ywin, out double pXdrw, out double pYdrw);

  [DllImport("litecad.dll", EntryPoint="lcWndGetCursorCoord", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool WndGetCursorCoord(int hLcWnd, out int pXwin, out int pYwin, out double pXdrw, out double pYdrw);

  [DllImport("litecad.dll", EntryPoint="lcWndGetEntByPoint", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int WndGetEntByPoint(int hLcWnd, int Xwin, int Ywin);

  [DllImport("litecad.dll", EntryPoint="lcWndSetCmdwin", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool WndSetCmdwin(int hLcWnd, int hCmdLine);

  [DllImport("litecad.dll", EntryPoint="lcWndSetPropwin", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool WndSetPropwin(int hLcWnd, int hPropWnd);
